# aqua-marina

./: LICENSE  Makefile  README.md  demo.ipynb  environment.yml  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
.virtual_documents/note_books/: try_your_environment.ipynb
note_books/: 001_try_your_environment.ipynb  0021_image_compression.ipynb  0022_image_meta_data.ipynb  002_loading_images.ipynb  021_image_compression.ipynb  030_working_with_scikit_image.ipynb  try_your_environment.ipynb
src/aqua-marina/: 002_pixels.py  pixels.py  try_your_environment.py
tests/: __init__.py
