[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aqua_marina"
version = "0.1.0"
authors = [
  { name="Joe Collins", email="joejcollins@gmail.com" },
]
description = "Data project template."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "black",
    "debugpy",  # only required for debugging, not needed for production.
    "mypy",
    "pandas",
    "pydantic",
    "pip-tools", # used to manage requirements.txt.
    "pytest",  # used for testing, not needed for production.
    "radian",
    "ruff",
    "sourcery",
    "jupyter"
]

[project.urls]
"homepage" = "https://github.com/joejcollins/aqua-marina"
"repository" = "https://github.com/joejcollins/aqua-marina"
"documentation" = "https://github.com/joejcollins/aqua-marina"

[tool.setuptools]
py-modules = [
    "src",
    "tests"
]  #  Disable auto discovery of modules (and only include the ones we specifically want).

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
    |\.git
)/
'''

[tool.pyright]
exclude = ["**/node_modules",
    "**/__pycache__"
]
reportMissingImports = true
reportMissingTypeStubs = true
pythonVersion = "3.10"
pythonPlatform = "Linux"

[tool.ruff]
lint.select = ["F", "E", "W", "C90", "I"]
lint.fixable = ["ALL"]
target-version = "py310"
exclude = [
    ".git",
    ".github",
    ".pytest_cache",
    ".venv",
    ".vscode",
    "__pycache__"
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
follow_imports = "skip"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q --disable-warnings --cache-clear"
testpaths = [
    "./tests"
]